# reversy-ex3

./: AIplayer.cpp  AIplayer.h  Board.cpp  Board.h  CMakeLists.txt  Design  GameFlow.cpp  GameFlow.h  GameLogic.cpp  GameLogic.h  HumanPlayer.cpp  HumanPlayer.h  Menu.cpp  Menu.h  Player.cpp  Player.h  Position.cpp  Position.h  README.md  ReadFile.java  RemoteGame.cpp  RemoteGame.h  RemotePlayer.cpp  RemotePlayer.h  WriteFile.java  a.out  git history  info.txt  main.cpp  makefile  player.out  protocol.txt
EX6/: build.fxbuild
Ex6/: .classpath  .project  settings.txt
Ex7/: .cproject  .project  CloseCommand.cpp  CloseCommand.h  Command.h  CommandsManager.cpp  CommandsManager.h  EndCommand.cpp  EndCommand.h  Game.cpp  Game.h  JoinCommand.cpp  JoinCommand.h  ListCommand.cpp  ListCommand.h  PlayCommand.cpp  PlayCommand.h  Server.cpp  Server.h  StartCommand.cpp  StartCommand.h  Task.h  ThreadPool.cpp  ThreadPool.h  main.cpp  server.out
client/: AIplayer.h  GameFlow.cpp  GameLogic.h  HumanPlayer.cpp  RemotePlayer.cpp  RemotePlayer.h  main.cpp
javaFXEx6/: Board.java  GameFlow.java  GameLogic.java  HumanPlayer.java  Player.java  Position.java  main.java
old server/: CloseCommand.h  Command.h  CommandsManager.h  EndCommand.h  Game.cpp  ListCommand.cpp  PlayCommand.cpp  Server.h  StartCommand.cpp  a.out  server.out
reversiapp/: Board.java  FinishGame.java  GameLogic.java  Main.java  Menu.fxml  Player.java  Position.java  ReadFile.java  ReversiBoard.java  ReversiGame.fxml  ReversiGameController.java  Settings.java  WriteFile.java  application.css  discSymbol.java  ex6.fxml  (+1 more)
(+86 files in other folders)
